# monad-challenges

monad-challenges-code/: hie.yaml  monad-challenges-code.cabal
monad-challenges-code/hakyll/pages/: ex2-5.md  ex2-6.md  ex3-1.md  ex4-3.md
monad-challenges-code/src/: Set1.hs  Set2.hs  Set3.hs  Set4.hs
monad-challenges-code/test/: Main.hs
