name:          monad-challenges-code
version:       0.1.0.0
license:       BSD3
license-file:  LICENSE
author:        Doug Beardsley
maintainer:    mightybyte@gmail.com
synopsis:      The best way to learn monads
description:   Series of challenges to help build intuition about monads
category:      Education
build-type:    Simple
cabal-version: >=1.10
tested-with:
  GHC ==7.6.3
   || ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.3
   || ==8.8.3
   || ==8.10.1

library
  -- cabal-fmt: expand src
  exposed-modules:
    MCPrelude
    Set1

  other-extensions:
    NoImplicitPrelude
    BangPatterns
    CPP
    Trustworthy

  build-depends:    base ==4.*
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
      base
    , hspec
    , monad-challenges-code

executable site
  hs-source-dirs:   hakyll
  main-is:          site.hs
  build-depends:
      base
    , filepath
    , hakyll
    , mtl
    , transformers

  default-language: Haskell2010
