cabal-version: 3.6
name:          monad-challenges-code
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        Doug Beardsley
maintainer:    mightybyte@gmail.com
synopsis:      The best way to learn monads
description:   Series of challenges to help build intuition about monads
category:      Education
build-type:    Simple
tested-with:   GHC ==9.0.2

library
  -- cabal-fmt: expand src
  exposed-modules:
    MCPrelude
    Set1
    Set2
    Set3
    Set4

  default-extensions:
    NoImplicitPrelude
    MonadComprehensions
    RebindableSyntax

  build-depends:      base >=4 && <5
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wmonomorphism-restriction -Wmissing-local-signatures
    -Wmissing-exported-signatures -Wmissing-export-lists
    -Wmissing-home-modules -Widentities -Wredundant-constraints
    -Wpartial-fields -Wno-unused-top-binds

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base
    , base16-bytestring
    , cryptohash-sha256
    , hspec
    , monad-challenges-code
    , text

executable site
  hs-source-dirs:   hakyll
  main-is:          site.hs
  build-depends:
    , base
    , filepath
    , hakyll
    , mtl
    , transformers

  default-language: Haskell2010
